# poetry2nix-example

./: README.md  default.nix  flake.nix  pyproject.toml  shell.nix
