[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Carl Thomé <carlthome@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchmetrics = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
pytest = "^8.2.2"

[tool.poetry.scripts]
app = "app.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
